--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "framer-motion": "^10.16.4",
     "next": "13.5.6",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0",
-    "resend": "^2.0.0"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
